# edgeshield

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PRINCIPLES.md  Dockerfile  LICENSE  LICENSE-MIT  LICENSES.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STYLE_GUIDE.md  SUPPORT.md  docker-compose.yaml  rust-toolchain.toml
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml  docker.yaml
crates/api/: Cargo.toml
crates/api/src/: api.rs  audit.rs  auth.rs  lib.rs  routes.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs  setup.rs
crates/common/: Cargo.toml
crates/common/src/: alert.rs  alert_store.rs  error.rs  history_store.rs  lib.rs  time.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  error.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  lib.rs
crates/daemon/tests/: pipeline.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: discovery.rs  lib.rs
crates/notify/: Cargo.toml
crates/notify/src/: email.rs  fanout.rs  lib.rs  mqtt.rs  ntfy.rs  webhook.rs
crates/oui/: Cargo.toml  build.rs
crates/oui/src/: lib.rs
crates/packet/: Cargo.toml
crates/packet/src/: capture.rs  decode.rs  lib.rs
crates/packet/tests/: fixtures.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: classifier.rs  dhcp.rs  lib.rs  mdns.rs  ntp.rs
crates/rules/: Cargo.toml
crates/rules/src/: config_bridge.rs  engine.rs  lib.rs  store.rs
crates/storage/: Cargo.toml
crates/storage/src/: alert_sqlite.rs  history_sqlite.rs  lib.rs  memory.rs  sqlite.rs  store.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  telemetry.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  client.rs  event.rs  lib.rs  main.rs  snapshot.rs  theme.rs
crates/tui/src/views/: alerts.rs  device_detail.rs  devices.rs  health.rs  metrics.rs  mod.rs
crates/tui/tests/: client.rs  render.rs
docs/: configuration.md  logging.md  observability.md  performance.md  tui.md
docs/adr/: ADR-0001-why-rust.md  ADR-0002-cargo-workspace.md  ADR-0003-tokio-runtime.md  ADR-0004-packet-capture-library.md  ADR-0005-storage-backend.md  ADR-0006-tui-observability-dashboard.md
docs/api/: rest.md
docs/architecture/: network.md  storage.md  system.md
docs/deployment/: docker.md  grafana.md
docs/development/: coding-standards.md  setup.md  testing.md
docs/security/: cryptography.md  threat-model.md
