[package]
name = "edgeshield-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
mac_address.workspace = true
hex.workspace = true
edgeshield-common = { path = "../common" }
edgeshield-storage = { path = "../storage" }

[dev-dependencies]
edgeshield-rules = { path = "../rules" }
