[package]
name = "edgeshield-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "edgeshield"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:edgeshield-tui"]

[dependencies]
clap = { workspace = true, features = ["derive", "unstable-styles"] }
clap_complete = "4"
libc = "0.2"
tokio.workspace = true
anyhow.workspace = true
nix = { version = "0.29", default-features = false, features = ["user"] }
edgeshield-config = { path = "../config" }
edgeshield-daemon = { path = "../daemon" }
edgeshield-tui = { path = "../tui", optional = true }
# Setup wizard
dialoguer.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
