[package]
name = "edgeshield-packet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pnet.workspace = true
pcap.workspace = true
etherparse.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
edgeshield-common = { path = "../common" }
