[package]
name = "edgeshield-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
edgeshield-common = { path = "../common" }
edgeshield-packet = { path = "../packet" }

[dev-dependencies]
bytes.workspace = true
