[package]
name = "edgeshield-rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
mac_address.workspace = true
dashmap.workspace = true
edgeshield-common = { path = "../common" }
edgeshield-config = { path = "../config" }
edgeshield-discovery = { path = "../discovery" }

[dev-dependencies]
chrono.workspace = true