[package]
name = "edgeshield-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
mac_address.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
chrono.workspace = true
edgeshield-common = { path = "../common" }
